loading spinner issue done

--- a/styles/global.css
+++ b/styles/global.css
@@ -31,15 +31,15 @@
   height: 100px;
   border-radius: 69%;
 }
-.cyan {
+.first {
   top: 0px;
   border-top: 5px cyan solid;
   animation-delay: 4s;
-  animation: cyan 1.5s infinite;
+  animation: first 1.5s infinite;
 }
 /*:after element = circle at the end of each line.
 :before element = cap in be start of each line*/
-.cyan:after {
+.first:after {
   position: absolute;
   content: "";
   width: 10px;
@@ -50,7 +50,7 @@
   top: 10px;
   box-shadow: 0px 0px 20px cyan;
 }
-.cyan:before {
+.first:before {
   content: " ";
   width: 5px;
   height: 5px;
@@ -60,13 +60,13 @@
   left: 11px;
   border-radius: 69%;
 }
-.magenta {
+.second {
   left: 0px;
   bottom: 0px;
   border-top: 5px magenta solid;
-  animation: magenta 1.5s infinite;
+  animation: second 1.5s infinite;
 }
-.magenta:after {
+.second:after {
   position: absolute;
   content: "";
   width: 10px;
@@ -77,7 +77,7 @@
   top: 10px;
   box-shadow: 0px 0px 20px magenta;
 }
-.magenta:before {
+.second:before {
   content: " ";
   width: 5px;
   height: 5px;
@@ -87,13 +87,13 @@
   left: 11px;
   border-radius: 69%;
 }
-.yellow {
+.third {
   right: 0px;
   bottom: 0px;
   border-top: 5px yellow solid;
-  animation: yellow 1.5s infinite;
+  animation: third 1.5s infinite;
 }
-.yellow:after {
+.third:after {
   position: absolute;
   content: "";
   width: 10px;
@@ -104,7 +104,7 @@
   top: 10px;
   box-shadow: 0px 0px 20px yellow;
 }
-.yellow:before {
+.third:before {
   content: " ";
   width: 5px;
   height: 5px;
@@ -114,7 +114,7 @@
   left: 11px;
   border-radius: 69%;
 }
-@keyframes cyan {
+@keyframes first {
   0% {
     transform: rotate(0deg);
   }
@@ -122,7 +122,7 @@
     transform: rotate(360deg);
   }
 }
-@keyframes magenta {
+@keyframes second {
   0% {
     transform: rotate(240deg);
   }
@@ -130,7 +130,7 @@
     transform: rotate(600deg);
   }
 }
-@keyframes yellow {
+@keyframes third {
   0% {
     transform: rotate(120deg);
   }
